--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -5,7 +5,8 @@
     font-weight: 400;
     font-size: 16px;
     line-height: 18px;
-    margin: 0 18px 0 0;
+    margin: 0;
+    transition-property: opacity; 
 }
 
 @media screen and (max-width: 767px ) {
@@ -15,3 +16,7 @@
     }
 }
 
+
+.footer__link:hover { 
+    opacity: 0.8; 
+} 
