--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,9 +1,8 @@
 .footer {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(74px, 1fr));
-    justify-content: space-between;
+    grid-template-columns: repeat(5,max-content) 1fr;
     max-width: 1184px;
-    row-gap: ;
+    column-gap: 18px;
     margin: 92px auto 24px;
 }
 
@@ -18,13 +17,15 @@
     .footer {
         padding-left: 24px;
         padding-right: 24px;
+        margin-top: 88px;
     }
 }
 
-.place {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-    row-gap: 48px;
-    column-gap: 40px;
-    margin-bottom: 80px;
+@media screen and (max-width: 767px ) {
+    .footer {
+        grid-template-rows: repeat(5, max-content) 1fr;
+        grid-template-columns: 1fr;
+        row-gap: 32px;
+        margin-top: 64px;
+    }
 }
