--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -6,5 +6,6 @@
     background-color: #2A2C2F;
     font-family: 'Inter', Arial, sans-serif; 
     color: #FFFFFF;
-    
+    -webkit-font-smoothing: antialiased; 
+    -moz-osx-font-smoothing: grayscale; 
 }
