fixes after review

--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -3,6 +3,8 @@
     line-height: 28px;
     margin: 0 0 0 18px;
     color: #FFFFFF;
+    text-decoration: none;
+    transition-property: opacity; 
 }
 
 @media screen and (max-width: 767px) {
@@ -12,3 +14,6 @@
     }
 }
     
+.header__lang-link:hover { 
+    opacity: 0.8; 
+} 
