--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -4,16 +4,27 @@
 
 }
 
-@media screen and (max-width: 1184px) {
+@media screen and (max-width: 1279px) {
     .lead__image {
         max-width: 928px;
         margin-top: 56px;
     }
 }
 
+@media screen and (max-width: 1023px) {
+    .lead__image {
+        max-width: 768px;
+    }
+}
+
 @media screen and (max-width: 768px) {
     .lead__image {
         width: 100%;
+    }
+}
+
+@media screen and (max-width: 465px) {
+    .lead__image {
         margin-top: 40px;
     }
 }
