--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -5,12 +5,13 @@
     font-size: 14px;
     line-height: 16px;
     justify-self: end;
+    margin: 0;
 }
 
 @media screen and (max-width: 767px ) {
     .footer__copyright {
         justify-self: stretch;
         align-self: end;
-        margin-top: 16px;
+        margin-top: 48px;
     }
 }
