--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,8 +1,7 @@
 .footer {
     display: grid;
-    grid-template-columns: repeat(5,max-content) 1fr;
+    grid-template-columns: max-content 1fr;
     max-width: 1184px;
-    column-gap: 18px;
     margin: 92px auto 24px;
 }
 
@@ -23,9 +22,10 @@
 
 @media screen and (max-width: 767px ) {
     .footer {
-        grid-template-rows: repeat(5, max-content) 1fr;
+        grid-template-rows: max-content 1fr;
         grid-template-columns: 1fr;
-        row-gap: 32px;
+        padding-left: 16px;
+        padding-right: 0;
         margin-top: 64px;
     }
 }
