--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -7,6 +7,7 @@
     font-weight: 400;
     font-size: 10px;
     line-height: 14px;
+    letter-spacing: 1.5px;
 }
 
 @media screen and (max-width: 1184px) {
