--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,8 +1,9 @@
 .place__image {
-    width: 100%;
+    /*width: 100%;*/
+    max-width: 460px;
 }
 
-@media screen and (min-width: 321px) {
+/*@media screen and (min-width: 321px) {
     .place__image {
         max-width: 340px;
     }
@@ -18,6 +19,27 @@
     .place__image {
         max-width: 460px;
     }
+}*/
+
+@media screen and (max-width: 1279px) {
+    .place__image {
+        max-width: 440px;
+    }
 }
+
+@media screen and (max-width: 1023px) {
+    .place__image {
+        max-width: 340px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .place__image {
+        max-width: 320px;
+    }
+}
+
+
+
 
 
