--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -9,6 +9,9 @@
 @media screen and (max-width: 1023px) {
     .place__paragraph {
         font-size: 16px;
-        line-height: 163%;
     } 
+}
+
+.place__paragraph:last-of-type {
+    margin-bottom: 0;
 }
