--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -15,15 +15,17 @@
 @media screen and (max-width: 1023px) {
     .place {
         column-gap: 28px;
+        margin-bottom: 73px;
     } 
 }
 
 @media screen and (max-width: 767px) {
     .place {
         row-gap: 32px;
+        margin-bottom: 50px;
     } 
 }
 
-.place:nth-of-type(5) {
+.place:last-of-type {
     margin-bottom: 0;
 }
