--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -5,13 +5,40 @@
     margin: 92px auto;
 }
 
-@media screen and (min-width: 1025px) {
+@media screen and (min-width: 1025px) { 
+    .places { 
+        max-width: 984px; 
+    } 
+}
+
+@media screen and (max-width: 1279px) {
     .places {
-        max-width: 984px;
+        padding-left: 48px;
+        padding-right: 48px;
     }
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1023px) {
+    .places {
+        padding-left: 24px;
+        padding-right: 24px;
+        margin-top: 88px;
+        margin-bottom: 90px;
+    }
+}
+
+@media screen and (max-width: 515px) {
+    .places {
+        padding-left: 0;
+        padding-right: 0;  
+        margin-top: 64px;
+        margin-bottom: 66px;     
+    }
+}
+
+
+
+/*@media screen and (max-width: 1024px) {
     .places {
         padding-left: 48px;
         padding-right: 48px;
@@ -35,4 +62,6 @@
         padding-right: 0;
     }
 }
+
+*/
 
